# cmake_sample_project

./: .gitignore  CMakeLists.txt  README.md  sample_project.txt
src/: CMakeLists.txt  main.cpp
src/A/: CMakeLists.txt  libA.cpp
src/A/public/: libA.h
src/B/: CMakeLists.txt  libB.cpp  libB.h
src/C/: CMakeLists.txt  libC.cpp  libC.h
